Use file metadata from DriveFS in quickview when available.

MetadataBoxController uses the availability of externalFileUrl in file
metadata to decide whether to obtain metadata via
ExternalMetadataProvider or by reading the file. With DriveFS,
externalFileUrl is not set but ExternalMetadataProvider should be used
for fetching metadata. Also use alternateUrl (which is only set for
Drive files) to detect files where this metadata provider should be
used.

Also skip FSP metadata requests when none of the metadata fields are
available via the FSP API.

Bug: 913738, 587231
Change-Id: I95636e6bcf1d21cea3366d17363ab6300b1d59f8
Reviewed-on: https://chromium-review.googlesource.com/c/1370154
Commit-Queue: Sam McNally <sammc@chromium.org>
Reviewed-by: Luciano Pacheco <lucmult@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#615437}(cherry picked from commit 6704bdc5470f916c63c6d3513986f469dbd448c6 [formerly b5b7717b7137efdd1ef344dcd0348a6211f6fd57])
Reviewed-on: https://chromium-review.googlesource.com/c/1382656
Reviewed-by: Sam McNally <sammc@chromium.org>
Cr-Commit-Position: refs/branch-heads/3626@{#455}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: cd47cf3e14265cec98590d3a30ec0ecd26c8827f